# ichthywhat

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vagrantfile  app.py  app_util.py  conda.yaml  datasets.py  environment-dev.yml  environment.yml  experiments.py  manage.py  mlruns.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint-and-test.yml  lint.yml  pre-commit.yml
.streamlit/: config.toml
ichthywhat/: __init__.py  api.py  app.py  app_util.py  constants.py  datasets.py  experiments.py  inference.py  models.py  onnx_poc.py  training.py
kaggle-output/: README.md
kaggle-output/deep-fish-initial-experiments/: mlruns-v10.db  mlruns-v11.db  mlruns-v12.db  mlruns-v7.db
notebooks/: 00-exploration.ipynb  01-data-collection.ipynb  02-initial-experiments.ipynb  02a-initial-experiments-kaggle.ipynb  02b-initial-experiments-larger-datasets.ipynb  03-app.ipynb  05-cleaner-data-experiments.ipynb  06a-model-refresh-training-kaggle.ipynb  06b-model-refresh-validation.ipynb  07-fiftyone-games.ipynb
resources/: api-site-surveys.json  api-species.json  model.pkl
rls-site/: README.md
rls-site/fish-id/: index.html
tests/: test_api.py
