[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ichthywhat"
version = "1.0.0"
description = "Ichthy-what? Fishy photo ID with Reef Life Survey data"
authors = ["Yanir Seroussi <rls@yanirseroussi.com>"]

[tool.poetry.dependencies]
python = "~=3.10"
fastai = "~=2.7"
geopy = "~=2.3"
mlflow = "~=1.30"
streamlit = "~=1.12"
streamlit-cropper = "~=0.2"
fastapi = "~=0.95.0"
uvicorn = "~=0.21.1"
python-multipart = "~=0.0.6"

[tool.poetry.dev-dependencies]
jupyter = "~=1.0"
defopt = "~=6.4"
pre-commit = "~=2.21"

[tool.poetry.scripts]
ichthywhat = "ichthywhat:run_cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
